# TeDa

./: CMakeLists.txt  README.md  buttons.cpp  buttons.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  inputdialog.cpp  inputdialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h  user.h
openssl-output/include/openssl/: configuration.h
openssl-output/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
